Agregado soporte para español

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="index.html">Home</a>
             <a href="#products">Products</a>
             <a href="mailto:support@codeaeternum.com">Contact</a>
+            <a href="es/index.html" class="lang-switch">🇲🇽 ES</a>
         </nav>
     </header>
 
