Add TG Grabber Pro product page, new logo, audit fixes

--- a/es/index.html
+++ b/es/index.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Aeternum | Software para el Futuro</title>
+    <meta name="description"
+        content="Extensiones de navegador premium y utilidades de productividad diseñadas para optimizar tu flujo de trabajo digital.">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <header>
-        <div class="logo">Code Aeternum</div>
+        <a href="index.html" class="logo" style="text-decoration:none; display:flex; align-items:center; gap:10px;">
+            <img src="../img/logo.png" alt="Code Aeternum" width="32" height="32" style="border-radius:8px;">
+            Code Aeternum
+        </a>
         <nav>
             <a href="index.html">Inicio</a>
             <a href="#products">Productos</a>
@@ -33,16 +38,16 @@
             <div class="card">
                 <div class="card-icon">⚡</div>
                 <h3>TG Media Grabber Pro</h3>
-                <p>La extensión definitiva para gestión multimedia. Descarga fotos, videos y archivos en masa con
+                <p>La extensión definitiva para gestión multimedia. Descarga fotos, videos y GIFs en masa con
                     filtrado avanzado y visualización en galería.</p>
-                <a href="#" class="card-link">Saber Más &rarr;</a>
+                <a href="../tg-grabber-pro.html" class="card-link">Saber Más &rarr;</a>
             </div>
 
             <!-- Future Product Placeholder 1 -->
             <div class="card">
                 <div class="card-icon">🔒</div>
                 <h3>Secure Notes (Próximamente)</h3>
-                <p>Bloc de notas encriptado de extremo a extremo para tus datos sensibles. Accede a tus pensamientos de
+                <p>Bloc de notas encriptado de extremo a extremo para tus datos sensibles. Accede de
                     forma segura desde cualquier dispositivo.</p>
                 <span class="card-link" style="opacity:0.5; cursor: default;">En Desarrollo</span>
             </div>
@@ -62,9 +67,9 @@
         <div class="footer-content">
             <div class="footer-col">
                 <h4>Code Aeternum</h4>
-                <a href="#">Sobre Nosotros</a>
-                <a href="#">Carreras</a>
                 <a href="mailto:contact@codeaeternum.com">Contacto</a>
+                <a href="https://twitter.com/CodeAeternum" target="_blank">Twitter / X</a>
+                <a href="https://github.com/GalindoAsc" target="_blank">GitHub</a>
             </div>
             <div class="footer-col">
                 <h4>Legal</h4>
