--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Aeternum | Software for the Future</title>
+    <meta name="description"
+        content="Premium browser extensions and productivity utilities designed to streamline your digital workflow.">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <div class="logo">Code Aeternum</div>
+        <a href="index.html" class="logo" style="text-decoration:none; display:flex; align-items:center; gap:10px;">
+            <img src="img/logo.png" alt="Code Aeternum" width="32" height="32" style="border-radius:8px;">
+            Code Aeternum
+        </a>
         <nav>
             <a href="index.html">Home</a>
             <a href="#products">Products</a>
@@ -33,7 +38,7 @@
             <div class="card">
                 <div class="card-icon">⚡</div>
                 <h3>TG Media Grabber Pro</h3>
-                <p>The ultimate browser extension for media management. Bulk download photos, videos, and files with
+                <p>The ultimate browser extension for media management. Bulk download photos, videos, and GIFs with
                     advanced filtering and gallery visualization.</p>
                 <a href="tg-grabber-pro.html" class="card-link">Learn More &rarr;</a>
             </div>
@@ -62,10 +67,9 @@
         <div class="footer-content">
             <div class="footer-col">
                 <h4>Code Aeternum</h4>
-                <a href="#">About Us</a>
-                <a href="#">Careers</a>
                 <a href="mailto:contact@codeaeternum.com">Contact</a>
                 <a href="https://twitter.com/CodeAeternum" target="_blank">Twitter / X</a>
+                <a href="https://github.com/GalindoAsc" target="_blank">GitHub</a>
             </div>
             <div class="footer-col">
                 <h4>Legal</h4>
