--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="footer-col">
                 <h4>Code Aeternum</h4>
                 <a href="mailto:contact@codeaeternum.com">Contact</a>
-                <a href="https://twitter.com/CodeAeternum" target="_blank">Twitter / X</a>
+                <a href="https://x.com/CodeAeternum" target="_blank">𝕏 @CodeAeternum</a>
                 <a href="https://github.com/GalindoAsc" target="_blank">GitHub</a>
             </div>
             <div class="footer-col">
