--- a/tg-grabber-pro.html
+++ b/tg-grabber-pro.html
@@ -33,6 +33,7 @@
             <a href="index.html">Home</a>
             <a href="index.html#products">Products</a>
             <a href="mailto:support@codeaeternum.com">Contact</a>
+            <a href="https://x.com/CodeAeternum" target="_blank">𝕏</a>
         </nav>
     </header>
 
@@ -94,6 +95,16 @@
                 <h3>Type Filtering</h3>
                 <p>Filter by Photos, Videos, or GIFs. Toggle types on and off to download only what matters.</p>
             </div>
+            <div class="feature-card">
+                <div class="feature-icon">📏</div>
+                <h3>Size Limits</h3>
+                <p>Set a max file size to auto-skip oversized videos. Choose from 500 MB to 4 GB or no limit at all.</p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon">🛡️</div>
+                <h3>Resilient Downloads</h3>
+                <p>Graceful error recovery keeps the queue moving. Temporary failures won't stall your entire batch.</p>
+            </div>
         </div>
     </section>
 
@@ -135,7 +146,7 @@
                 <h4>Code Aeternum</h4>
                 <a href="index.html">Home</a>
                 <a href="mailto:support@codeaeternum.com">Support</a>
-                <a href="https://twitter.com/CodeAeternum" target="_blank">Twitter / X</a>
+                <a href="https://x.com/CodeAeternum" target="_blank">𝕏 @CodeAeternum</a>
             </div>
             <div class="footer-col">
                 <h4>Legal</h4>
