Update all contact emails to codeaeternum@outlook.com

--- a/es/index.html
+++ b/es/index.html
@@ -19,7 +19,7 @@
         <nav>
             <a href="index.html">Inicio</a>
             <a href="#products">Productos</a>
-            <a href="mailto:support@codeaeternum.com">Contacto</a>
+            <a href="mailto:codeaeternum@outlook.com">Contacto</a>
             <a href="../index.html" class="lang-switch">🇺🇸 EN</a>
         </nav>
     </header>
@@ -67,7 +67,7 @@
         <div class="footer-content">
             <div class="footer-col">
                 <h4>Code Aeternum</h4>
-                <a href="mailto:contact@codeaeternum.com">Contacto</a>
+                <a href="mailto:codeaeternum@outlook.com">Contacto</a>
                 <a href="https://x.com/CodeAeternum" target="_blank">𝕏 @CodeAeternum</a>
                 <a href="https://github.com/GalindoAsc" target="_blank">GitHub</a>
             </div>
