--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="#products">Products</a>
-            <a href="mailto:support@codeaeternum.com">Contact</a>
+            <a href="mailto:codeaeternum@outlook.com">Contact</a>
             <a href="es/index.html" class="lang-switch">🇲🇽 ES</a>
         </nav>
     </header>
@@ -67,7 +67,7 @@
         <div class="footer-content">
             <div class="footer-col">
                 <h4>Code Aeternum</h4>
-                <a href="mailto:contact@codeaeternum.com">Contact</a>
+                <a href="mailto:codeaeternum@outlook.com">Contact</a>
                 <a href="https://x.com/CodeAeternum" target="_blank">𝕏 @CodeAeternum</a>
                 <a href="https://github.com/GalindoAsc" target="_blank">GitHub</a>
             </div>
