--- a/refund-policy.html
+++ b/refund-policy.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="index.html#products">Products</a>
-            <a href="mailto:support@codeaeternum.com">Contact</a>
+            <a href="mailto:codeaeternum@outlook.com">Contact</a>
         </nav>
     </header>
 
@@ -39,7 +39,7 @@
 
         <h2>4. Contact Us</h2>
         <p>If you have any questions, please contact us at <a
-                href="mailto:support@codeaeternum.com">support@codeaeternum.com</a>.</p>
+                href="mailto:codeaeternum@outlook.com">codeaeternum@outlook.com</a>.</p>
     </div>
 
     <footer>
