--- a/tg-grabber-pro.html
+++ b/tg-grabber-pro.html
@@ -32,7 +32,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="index.html#products">Products</a>
-            <a href="mailto:support@codeaeternum.com">Contact</a>
+            <a href="mailto:codeaeternum@outlook.com">Contact</a>
             <a href="https://x.com/CodeAeternum" target="_blank">𝕏</a>
         </nav>
     </header>
@@ -145,7 +145,7 @@
             <div class="footer-col">
                 <h4>Code Aeternum</h4>
                 <a href="index.html">Home</a>
-                <a href="mailto:support@codeaeternum.com">Support</a>
+                <a href="mailto:codeaeternum@outlook.com">Support</a>
                 <a href="https://x.com/CodeAeternum" target="_blank">𝕏 @CodeAeternum</a>
             </div>
             <div class="footer-col">
