Use column-only logo (no baked text) in header and hero across all pages

--- a/es/index.html
+++ b/es/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <a href="index.html" class="logo">
-            <img src="../img/logo.png" alt="Code Aeternum" width="32" height="32">
+            <img src="../img/logo-sin-nombre32x32.png" alt="Code Aeternum" width="32" height="32">
             Code Aeternum
         </a>
         <nav>
@@ -32,7 +32,7 @@
 
     <!-- Hero -->
     <section class="hero">
-        <img src="../img/logo.png" alt="" class="hero-logo" width="100" height="100">
+        <img src="../img/logo-sin-nombre.png" alt="" class="hero-logo">
         <div class="hero-badge">Código Eterno, Herramientas Modernas</div>
         <h1>Software Hecho para <span class="gradient-text">Resistir</span> el Paso del Tiempo</h1>
         <p>Creamos extensiones de navegador y herramientas de desarrollo enfocadas y de alto rendimiento. Sin bloat, sin
