--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <a href="index.html" class="logo">
-            <img src="img/logo.png" alt="Code Aeternum" width="32" height="32">
+            <img src="img/logo-sin-nombre32x32.png" alt="Code Aeternum" width="32" height="32">
             Code Aeternum
         </a>
         <nav>
@@ -31,7 +31,7 @@
 
     <!-- Hero -->
     <section class="hero">
-        <img src="img/logo.png" alt="" class="hero-logo" width="100" height="100">
+        <img src="img/logo-sin-nombre.png" alt="" class="hero-logo">
         <div class="hero-badge">Eternal Code, Modern Tools</div>
         <h1>Software Built to <span class="gradient-text">Stand the Test</span> of Time</h1>
         <p>We build focused, high-performance browser extensions and developer tools. No bloat, no tracking — just
