--- a/tg-grabber-pro.html
+++ b/tg-grabber-pro.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <a href="index.html" class="logo">
-            <img src="img/logo.png" alt="Code Aeternum" width="32" height="32">
+            <img src="img/logo-sin-nombre32x32.png" alt="Code Aeternum" width="32" height="32">
             Code Aeternum
         </a>
         <nav>
