--- a/tg-grabber-pro.html
+++ b/tg-grabber-pro.html
@@ -20,7 +20,7 @@
     <meta name="twitter:description"
         content="Download photos, videos & GIFs from Telegram Web in bulk. Free Chrome extension.">
     <link rel="icon" type="image/png" href="img/favicon.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2.0">
     <link rel="stylesheet" href="css/product.css">
 </head>
 
