Added Direct Download ZIP option

--- a/tg-grabber-pro.html
+++ b/tg-grabber-pro.html
@@ -57,6 +57,13 @@
                 </svg>
                 Install Free — Chrome Web Store
             </a>
+            <a href="downloads/tg-media-grabber-pro.zip" class="cta-button cta-secondary" download>
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"
+                    style="vertical-align: middle; margin-right: 8px;">
+                    <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" />
+                </svg>
+                Download ZIP (Sideload)
+            </a>
         </div>
         <p class="hero-note">Works on Telegram Web K and A · Chrome, Edge, Brave</p>
     </section>
@@ -165,7 +172,10 @@
             style="border-radius:16px; margin-bottom:1.5rem;">
         <h2>Ready to save your Telegram media?</h2>
         <p>Join thousands of users who trust TG Grabber Pro for their media management needs.</p>
-        <a href="#" class="cta-button">Get It Free on Chrome Web Store</a>
+        <div class="hero-actions" style="justify-content: center;">
+            <a href="#" class="cta-button">Get It Free on Chrome Web Store</a>
+            <a href="downloads/tg-media-grabber-pro.zip" class="cta-button cta-secondary" download>Download ZIP</a>
+        </div>
     </section>
 
     <footer>
