Refined Header: SVG Icons & Spanish Product Page

--- a/es/tg-grabber-pro.html
+++ b/es/tg-grabber-pro.html
@@ -4,36 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TG Media Grabber Pro — Download Telegram Media | Code Aeternum</title>
+    <title>TG Media Grabber Pro — Descarga Multimedia de Telegram | Code Aeternum</title>
     <meta name="description"
-        content="Download photos, videos, and GIFs from Telegram Web in bulk. Smart duplicate detection, gallery preview, and one-click downloads. Free Chrome extension.">
+        content="Descarga fotos, videos y GIFs de Telegram Web masivamente. Detección inteligente de duplicados, vista previa en galería y descargas en un clic. Extensión gratuita para Chrome.">
     <meta name="keywords"
-        content="telegram downloader, telegram media, bulk download, chrome extension, telegram photos, telegram videos">
-    <meta property="og:title" content="TG Media Grabber Pro — Download Telegram Media">
+        content="descargador telegram, multimedia telegram, descarga masiva, extension chrome, fotos telegram, videos telegram">
+    <meta property="og:title" content="TG Media Grabber Pro — Descarga Multimedia de Telegram">
     <meta property="og:description"
-        content="Bulk download photos, videos, and GIFs from Telegram Web. Free Chrome extension.">
+        content="Descarga masiva de fotos, videos y GIFs de Telegram Web. Extensión gratuita para Chrome.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://codeaeternum.com/tg-grabber-pro">
+    <meta property="og:url" content="https://codeaeternum.com/es/tg-grabber-pro">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@CodeAeternum">
     <meta name="twitter:title" content="TG Media Grabber Pro">
     <meta name="twitter:description"
-        content="Download photos, videos & GIFs from Telegram Web in bulk. Free Chrome extension.">
-    <link rel="icon" type="image/png" href="img/favicon.png">
-    <link rel="stylesheet" href="css/style.css?v=2.0">
-    <link rel="stylesheet" href="css/product.css?v=2.0">
+        content="Descarga fotos, videos y GIFs de Telegram Web masivamente. Extensión gratuita para Chrome.">
+    <link rel="icon" type="image/png" href="../img/favicon.png">
+    <link rel="stylesheet" href="../css/style.css?v=2.0">
+    <link rel="stylesheet" href="../css/product.css?v=2.0">
 </head>
 
 <body>
     <header>
         <a href="index.html" class="logo">
-            <img src="img/logo-sin-nombre32x32.png" alt="Code Aeternum" width="32" height="32">
+            <img src="../img/logo-sin-nombre32x32.png" alt="Code Aeternum" width="32" height="32">
             Code Aeternum
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="index.html#product">Product</a>
-            <a href="mailto:codeaeternum@outlook.com">Contact</a>
+            <a href="index.html">Inicio</a>
+            <a href="index.html#product">Producto</a>
+            <a href="mailto:codeaeternum@outlook.com">Contacto</a>
             <a href="https://x.com/CodeAeternum" target="_blank" aria-label="X (Twitter)">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
                     <path
@@ -46,20 +46,20 @@
                         d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
                 </svg>
             </a>
-            <a href="es/tg-grabber-pro.html" class="lang-switch">🇲🇽 ES</a>
+            <a href="../tg-grabber-pro.html" class="lang-switch">🇺🇸 EN</a>
         </nav>
     </header>
 
     <!-- Hero -->
     <section class="product-hero">
         <div class="hero-icon-wrap">
-            <img src="img/tg-grabber-icon.png" alt="TG Media Grabber Pro" class="hero-app-icon" width="120"
+            <img src="../img/tg-grabber-icon.png" alt="TG Media Grabber Pro" class="hero-app-icon" width="120"
                 height="120">
         </div>
-        <div class="product-badge">Free Chrome Extension</div>
+        <div class="product-badge">Extensión Chrome Gratuita</div>
         <h1>TG Media Grabber <span class="gradient-text">Pro</span></h1>
-        <p class="product-tagline">The ultimate Telegram Web downloader. Photos, videos & GIFs — in bulk, with one
-            click.</p>
+        <p class="product-tagline">El descargador definitivo para Telegram Web. Fotos, videos y GIFs — masivamente, con
+            un clic.</p>
         <div class="hero-actions">
             <a href="#" class="cta-button" id="installBtn">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"
@@ -67,98 +67,101 @@
                     <path
                         d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
                 </svg>
-                Install Free — Chrome Web Store
+                Instalar Gratis — Chrome Web Store
             </a>
-            <a href="downloads/tg-media-grabber-pro.zip" class="cta-button cta-secondary" download>
+            <a href="../downloads/tg-media-grabber-pro.zip" class="cta-button cta-secondary" download>
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"
                     style="vertical-align: middle; margin-right: 8px;">
                     <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" />
                 </svg>
-                Download ZIP (Sideload)
+                Descargar ZIP (Manual)
             </a>
         </div>
-        <p class="hero-note">Works on Telegram Web K and A · Chrome, Edge, Brave</p>
+        <p class="hero-note">Funciona en Telegram Web K y A · Chrome, Edge, Brave</p>
     </section>
 
     <!-- Promo Screenshot -->
     <section class="promo-screenshot">
-        <img src="img/promo-screenshot.png" alt="TG Media Grabber Pro in action — downloading media from Telegram Web"
+        <img src="../img/promo-screenshot.png" alt="TG Media Grabber Pro en acción — descargando media de Telegram Web"
             loading="lazy">
     </section>
 
     <!-- Features -->
     <section class="features">
-        <h2 class="section-title">Packed with Features</h2>
+        <h2 class="section-title">Repleto de Funciones</h2>
         <div class="features-grid">
             <div class="feature-card">
                 <div class="feature-icon">📦</div>
-                <h3>Bulk Download</h3>
-                <p>Scan entire chats and channels. Download hundreds of photos and videos with a single click.</p>
+                <h3>Descarga Masiva</h3>
+                <p>Escanea chats y canales completos. Descarga cientos de fotos y videos con un solo clic.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">🖼️</div>
-                <h3>Gallery Preview</h3>
-                <p>Browse all detected media in a visual gallery before downloading. Select exactly what you want.</p>
+                <h3>Vista Previa</h3>
+                <p>Navega por todo el contenido detectado en una galería visual antes de descargar. Elige exactamente lo
+                    que quieres.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">🧠</div>
-                <h3>Smart Duplicates</h3>
-                <p>Intelligent duplicate detection by filename and message ID. Never download the same file twice.</p>
+                <h3>Duplicados Inteligentes</h3>
+                <p>Detección inteligente de duplicados por nombre y ID de mensaje. Nunca descargues el mismo archivo dos
+                    veces.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">⚡</div>
-                <h3>Lightning Fast</h3>
-                <p>Downloads directly through Telegram's API for maximum speed. No external servers involved.</p>
+                <h3>Ultra Rápido</h3>
+                <p>Descargas directas a través de la API de Telegram para máxima velocidad, sin servidores externos.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">🔓</div>
-                <h3>Restricted Content</h3>
-                <p>Bypass forwarding restrictions to save media from channels that block downloads.</p>
+                <h3>Contenido Restringido</h3>
+                <p>Evita las restricciones de reenvío para guardar contenido de canales que bloquean las descargas.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">🎯</div>
-                <h3>Type Filtering</h3>
-                <p>Filter by Photos, Videos, or GIFs. Toggle types on and off to download only what matters.</p>
+                <h3>Filtrado por Tipo</h3>
+                <p>Filtra por Fotos, Videos o GIFs. Activa y desactiva tipos para descargar solo lo que importa.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">📏</div>
-                <h3>Size Limits</h3>
-                <p>Set a max file size to auto-skip oversized videos. Choose from 500 MB to 4 GB or no limit.</p>
+                <h3>Límites de Tamaño</h3>
+                <p>Establece un tamaño máximo para omitir videos pesados. Elige desde 500 MB hasta 4 GB o sin límite.
+                </p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">🛡️</div>
-                <h3>Resilient Downloads</h3>
-                <p>Graceful error recovery keeps the queue moving. Failures won't stall your entire batch.</p>
+                <h3>Descargas Resilientes</h3>
+                <p>Recuperación elegante de errores para mantener la cola en movimiento. Los fallos no detendrán tu
+                    lote.</p>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">📁</div>
-                <h3>Organized Files</h3>
-                <p>Files saved in TG_Media/{ChatName}/. Everything neatly organized by conversation.</p>
+                <h3>Archivos Organizados</h3>
+                <p>Archivos guardados en TG_Media/{NombreChat}/. Todo perfectamente organizado por conversación.</p>
             </div>
         </div>
     </section>
 
     <!-- How It Works -->
     <section class="how-it-works">
-        <h2 class="section-title">How It Works</h2>
+        <h2 class="section-title">Cómo Funciona</h2>
         <div class="steps">
             <div class="step">
                 <div class="step-number">1</div>
-                <h3>Install</h3>
-                <p>Add TG Grabber Pro to Chrome from the Web Store. Works instantly — zero configuration.</p>
+                <h3>Instalar</h3>
+                <p>Añade TG Grabber Pro a Chrome desde la Web Store. Funciona al instante — cero configuración.</p>
             </div>
             <div class="step">
                 <div class="step-number">2</div>
-                <h3>Scan</h3>
-                <p>Open any Telegram chat on web.telegram.org. Click the extension icon and hit
-                    <strong>Scan</strong>.
-                </p>
+                <h3>Escanear</h3>
+                <p>Abre cualquier chat en web.telegram.org. Haz clic en el icono de la extensión y pulsa
+                    <strong>Scan</strong>.</p>
             </div>
             <div class="step">
                 <div class="step-number">3</div>
-                <h3>Download</h3>
-                <p>Preview in the Gallery or click <strong>Download All</strong>. Files are saved organized by chat
-                    name.</p>
+                <h3>Descargar</h3>
+                <p>Previsualiza en la Galería o haz clic en <strong>Download All</strong>. Los archivos se guardan
+                    organizados por nombre de chat.</p>
             </div>
         </div>
     </section>
@@ -168,28 +171,29 @@
         <div style="max-width: 800px; margin: 0 auto;">
             <h2 class="section-title"
                 style="text-align: center; margin-bottom: 2rem; font-size: 2rem; color: var(--text-heading);">
-                Manual Installation Guide
+                Guía de Instalación Manual
             </h2>
             <div
                 style="background: rgba(11, 13, 16, 0.6); border: 1px solid var(--border); border-radius: 16px; padding: 2rem;">
                 <ol style="margin: 0; padding-left: 1.5rem; color: var(--text-body); line-height: 1.8;">
                     <li style="margin-bottom: 1rem;">
-                        <strong>Download</strong> the ZIP file and extract it to a folder.
+                        <strong>Descarga</strong> el archivo ZIP y extráelo en una carpeta.
                     </li>
                     <li style="margin-bottom: 1rem;">
-                        Open Chrome and type <code
+                        Abre Chrome y escribe <code
                             style="background: rgba(255,255,255,0.1); padding: 0.2rem 0.4rem; border-radius: 4px; color: var(--primary);">chrome://extensions</code>
-                        in the address bar.
+                        en la barra de direcciones.
                     </li>
                     <li style="margin-bottom: 1rem;">
-                        Enable <strong>Developer mode</strong> using the toggle switch in the top right corner.
+                        Activa el <strong>Modo de desarrollador</strong> usando el interruptor en la esquina superior
+                        derecha.
                     </li>
                     <li style="margin-bottom: 1rem;">
-                        Click the <strong>Load unpacked</strong> button that appears in the top left.
+                        Haz clic en el botón <strong>Cargar descomprimida</strong> que aparece arriba a la izquierda.
                     </li>
                     <li>
-                        Select the <strong>folder</strong> where you extracted the files. The extension is now
-                        installed!
+                        Selecciona la <strong>carpeta</strong> donde extrajiste los archivos. ¡La extensión ya está
+                        instalada!
                     </li>
                 </ol>
             </div>
@@ -198,28 +202,28 @@
 
     <!-- Support -->
     <section class="support-section">
-        <h2 class="section-title">Support Development</h2>
-        <p class="support-text">TG Grabber Pro is completely free. If you find it useful, consider buying us a
-            coffee!</p>
+        <h2 class="section-title">Apoya el Desarrollo</h2>
+        <p class="support-text">TG Grabber Pro es completamente gratuito. Si lo encuentras útil, ¡considera invitarnos
+            un café!</p>
         <div class="support-actions">
             <a href="https://ko-fi.com/codeaeternum" target="_blank" class="support-btn kofi-btn">
-                ☕ Buy me a coffee
+                ☕ Invítame un café
             </a>
             <a href="https://x.com/CodeAeternum" target="_blank" class="support-btn x-btn">
-                𝕏 Follow us
+                𝕏 Síguenos
             </a>
         </div>
     </section>
 
     <!-- CTA -->
     <section class="bottom-cta">
-        <img src="img/tg-grabber-icon.png" alt="TG Grabber Pro" width="64" height="64"
+        <img src="../img/tg-grabber-icon.png" alt="TG Grabber Pro" width="64" height="64"
             style="border-radius:16px; margin-bottom:1.5rem;">
-        <h2>Ready to save your Telegram media?</h2>
-        <p>Join thousands of users who trust TG Grabber Pro for their media management needs.</p>
+        <h2>¿Listo para guardar tu multimedia de Telegram?</h2>
+        <p>Únete a miles de usuarios que confían en TG Grabber Pro para gestionar sus archivos.</p>
         <div class="hero-actions" style="justify-content: center;">
-            <a href="#" class="cta-button">Get It Free on Chrome Web Store</a>
-            <a href="downloads/tg-media-grabber-pro.zip" class="cta-button cta-secondary" download>Download ZIP</a>
+            <a href="#" class="cta-button">Obtener Gratis en Chrome Store</a>
+            <a href="../downloads/tg-media-grabber-pro.zip" class="cta-button cta-secondary" download>Descargar ZIP</a>
         </div>
     </section>
 
@@ -227,23 +231,23 @@
         <div class="footer-content">
             <div class="footer-col">
                 <h4>Code Aeternum</h4>
-                <a href="index.html">Home</a>
-                <a href="mailto:codeaeternum@outlook.com">Support</a>
+                <a href="index.html">Inicio</a>
+                <a href="mailto:codeaeternum@outlook.com">Soporte</a>
                 <a href="https://x.com/CodeAeternum" target="_blank">𝕏 @CodeAeternum</a>
             </div>
             <div class="footer-col">
-                <h4>Products</h4>
+                <h4>Productos</h4>
                 <a href="#">TG Media Grabber Pro</a>
             </div>
             <div class="footer-col">
                 <h4>Legal</h4>
-                <a href="terms.html">Terms of Service</a>
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="refund-policy.html">Refund Policy</a>
+                <a href="../terms.html">Términos de Servicio</a>
+                <a href="../privacy.html">Política de Privacidad</a>
+                <a href="../refund-policy.html">Política de Reembolso</a>
             </div>
         </div>
         <div class="copyright">
-            &copy; 2026 Code Aeternum. All rights reserved.
+            &copy; 2026 Code Aeternum. Todos los derechos reservados.
         </div>
     </footer>
 </body>
