feat: multi-platform download section with direct links to Win/Mac/Linux assets

--- a/commanddock.html
+++ b/commanddock.html
@@ -21,7 +21,7 @@
         content="A contextual command panel for developers. Auto-detects your stack, one-click execution. Free.">
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="css/style.css?v=2.0">
-    <link rel="stylesheet" href="css/product.css?v=2.0">
+    <link rel="stylesheet" href="css/product.css?v=2.1">
 </head>
 
 <body>
@@ -60,12 +60,12 @@
         <p class="product-tagline">The contextual command panel for developers. Detects your project, shows the right
             commands, and runs them — all in one click.</p>
         <div class="hero-actions">
-            <a href="https://github.com/codeaeternum/commanddock/releases" target="_blank" class="cta-button">
+            <a href="#downloads" class="cta-button">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"
                     style="vertical-align: middle; margin-right: 8px;">
                     <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" />
                 </svg>
-                Download for Windows
+                Download Free
             </a>
             <a href="https://github.com/codeaeternum/commanddock" target="_blank" class="cta-button cta-secondary">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"
@@ -76,7 +76,7 @@
                 View on GitHub
             </a>
         </div>
-        <p class="hero-note">Electron + React · Windows, macOS, Linux · <a href="commanddock-changelog.html"
+        <p class="hero-note">Electron + React · Windows, macOS & Linux · <a href="commanddock-changelog.html"
                 style="color:var(--primary-light)">v1.0.1 Changelog</a></p>
     </section>
 
@@ -171,6 +171,45 @@
         </div>
     </section>
 
+    <!-- Downloads -->
+    <section class="downloads-section" id="downloads">
+        <h2 class="section-title">Download CommandDock</h2>
+        <p class="downloads-subtitle">Free & open source — pick your platform</p>
+        <div class="downloads-grid">
+            <a href="https://github.com/codeaeternum/commanddock/releases/download/v1.0.1/CommandDock.1.0.0.exe"
+                class="download-card" target="_blank">
+                <div class="download-icon">🪟</div>
+                <h3>Windows</h3>
+                <p class="download-file">Portable EXE · 92.5 MB</p>
+                <span class="download-btn">Download</span>
+            </a>
+            <a href="https://github.com/codeaeternum/commanddock/releases/download/v1.0.1/CommandDock.Setup.1.0.0.exe"
+                class="download-card" target="_blank">
+                <div class="download-icon">🪟</div>
+                <h3>Windows Installer</h3>
+                <p class="download-file">NSIS Setup · 92.7 MB</p>
+                <span class="download-btn">Download</span>
+            </a>
+            <a href="https://github.com/codeaeternum/commanddock/releases/download/v1.0.1/CommandDock-1.0.0-arm64.dmg"
+                class="download-card" target="_blank">
+                <div class="download-icon">🍎</div>
+                <h3>macOS</h3>
+                <p class="download-file">DMG (ARM64) · 108 MB</p>
+                <span class="download-btn">Download</span>
+            </a>
+            <a href="https://github.com/codeaeternum/commanddock/releases/download/v1.0.1/CommandDock-1.0.0.AppImage"
+                class="download-card" target="_blank">
+                <div class="download-icon">🐧</div>
+                <h3>Linux</h3>
+                <p class="download-file">AppImage · 112.8 MB</p>
+                <span class="download-btn">Download</span>
+            </a>
+        </div>
+        <p class="downloads-note">All releases available on <a
+                href="https://github.com/codeaeternum/commanddock/releases" target="_blank"
+                style="color:var(--primary-light)">GitHub Releases</a></p>
+    </section>
+
     <!-- Feedback -->
     <section class="support-section">
         <h2 class="section-title">Have Ideas?</h2>
@@ -208,8 +247,7 @@
         <h2>Ready to supercharge your workflow?</h2>
         <p>Join developers who trust CommandDock for their daily command-line needs.</p>
         <div class="hero-actions" style="justify-content: center;">
-            <a href="https://github.com/codeaeternum/commanddock/releases" target="_blank" class="cta-button">Download
-                Free</a>
+            <a href="#downloads" class="cta-button">Download Free</a>
             <a href="https://github.com/codeaeternum/commanddock" target="_blank"
                 class="cta-button cta-secondary">GitHub →</a>
         </div>
