--- a/es/commanddock.html
+++ b/es/commanddock.html
@@ -21,7 +21,7 @@
         content="Panel contextual de comandos para devs. Detecta tu stack, ejecución con un clic. Gratis.">
     <link rel="icon" type="image/png" href="../img/favicon.png">
     <link rel="stylesheet" href="../css/style.css?v=2.0">
-    <link rel="stylesheet" href="../css/product.css?v=2.0">
+    <link rel="stylesheet" href="../css/product.css?v=2.1">
 </head>
 
 <body>
@@ -60,12 +60,12 @@
         <p class="product-tagline">El panel contextual de comandos para desarrolladores. Detecta tu proyecto, muestra
             los comandos correctos y los ejecuta — todo con un clic.</p>
         <div class="hero-actions">
-            <a href="https://github.com/codeaeternum/commanddock/releases" target="_blank" class="cta-button">
+            <a href="#downloads" class="cta-button">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"
                     style="vertical-align: middle; margin-right: 8px;">
                     <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" />
                 </svg>
-                Descargar para Windows
+                Descargar Gratis
             </a>
             <a href="https://github.com/codeaeternum/commanddock" target="_blank" class="cta-button cta-secondary">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"
@@ -76,7 +76,7 @@
                 Ver en GitHub
             </a>
         </div>
-        <p class="hero-note">Electron + React · Windows, macOS, Linux · <a href="commanddock-changelog.html"
+        <p class="hero-note">Electron + React · Windows, macOS y Linux · <a href="commanddock-changelog.html"
                 style="color:var(--primary-light)">v1.0.1 Changelog</a></p>
     </section>
 
@@ -170,6 +170,45 @@
         </div>
     </section>
 
+    <!-- Descargas -->
+    <section class="downloads-section" id="downloads">
+        <h2 class="section-title">Descargar CommandDock</h2>
+        <p class="downloads-subtitle">Gratis y open source — elige tu plataforma</p>
+        <div class="downloads-grid">
+            <a href="https://github.com/codeaeternum/commanddock/releases/download/v1.0.1/CommandDock.1.0.0.exe"
+                class="download-card" target="_blank">
+                <div class="download-icon">🪟</div>
+                <h3>Windows</h3>
+                <p class="download-file">EXE Portable · 92.5 MB</p>
+                <span class="download-btn">Descargar</span>
+            </a>
+            <a href="https://github.com/codeaeternum/commanddock/releases/download/v1.0.1/CommandDock.Setup.1.0.0.exe"
+                class="download-card" target="_blank">
+                <div class="download-icon">🪟</div>
+                <h3>Instalador Windows</h3>
+                <p class="download-file">NSIS Setup · 92.7 MB</p>
+                <span class="download-btn">Descargar</span>
+            </a>
+            <a href="https://github.com/codeaeternum/commanddock/releases/download/v1.0.1/CommandDock-1.0.0-arm64.dmg"
+                class="download-card" target="_blank">
+                <div class="download-icon">🍎</div>
+                <h3>macOS</h3>
+                <p class="download-file">DMG (ARM64) · 108 MB</p>
+                <span class="download-btn">Descargar</span>
+            </a>
+            <a href="https://github.com/codeaeternum/commanddock/releases/download/v1.0.1/CommandDock-1.0.0.AppImage"
+                class="download-card" target="_blank">
+                <div class="download-icon">🐧</div>
+                <h3>Linux</h3>
+                <p class="download-file">AppImage · 112.8 MB</p>
+                <span class="download-btn">Descargar</span>
+            </a>
+        </div>
+        <p class="downloads-note">Todas las versiones disponibles en <a
+                href="https://github.com/codeaeternum/commanddock/releases" target="_blank"
+                style="color:var(--primary-light)">GitHub Releases</a></p>
+    </section>
+
     <!-- Feedback -->
     <section class="support-section">
         <h2 class="section-title">¿Tienes Ideas?</h2>
@@ -207,8 +246,7 @@
         <h2>¿Listo para potenciar tu flujo de trabajo?</h2>
         <p>Únete a los desarrolladores que confían en CommandDock para sus tareas diarias de línea de comandos.</p>
         <div class="hero-actions" style="justify-content: center;">
-            <a href="https://github.com/codeaeternum/commanddock/releases" target="_blank" class="cta-button">Descargar
-                Gratis</a>
+            <a href="#downloads" class="cta-button">Descargar Gratis</a>
             <a href="https://github.com/codeaeternum/commanddock" target="_blank"
                 class="cta-button cta-secondary">GitHub →</a>
         </div>
